[package]
name = "dom"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
thiserror = "1.0.61"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
miette = { version = "7.2.0", features = ["fancy"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
miette = { version = "7.2.0" }
