[package]
name = "dom_cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dom"
path = "src/main.rs"

[dependencies]
dom_core = { path = "../dom_core/" }
dom_std = { path = "../dom_std/" }
thiserror.workspace = true
miette = { workspace = true, features = ["fancy"] }
clap = { version = "4.5.4", features = ["derive"] }
