[package]
name = "dom_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
dom_core = { path = "../dom_core" }
miette = { workspace = true, features = ["fancy-no-syscall"] }
wasm-bindgen = "0.2.92"
web-sys = { version = "0.3.69", features = ["console"] }
console_error_panic_hook = "0.1.7"
